--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
   "name": "habit-tracker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "jest --watch"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/labrocadabro/habit-tracker.git"
-  },
-  "author": "Laura Abro",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/labrocadabro/habit-tracker/issues"
-  },
-  "homepage": "https://github.com/labrocadabro/habit-tracker#readme",
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-typescript": "^7.18.6",
-    "babel-jest": "^29.2.2",
-    "jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.2.2"
+    "@vitest/coverage-c8": "^0.24.5",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "typescript": "^4.6.4",
+    "vite": "^3.2.0",
+    "vitest": "^0.24.5"
   }
 }
