--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest watch --ui --threads false",
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@vitest/coverage-c8": "^0.24.5",
+    "@vitest/ui": "^0.24.5",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
