--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vitest/coverage-c8": "^0.24.5",
     "@vitest/ui": "^0.24.5",
     "autoprefixer": "^10.4.13",
+    "jsdom": "^20.0.2",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4",
