--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "habit-tracker",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest watch --ui --threads false",
-    "coverage": "vitest run --coverage"
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@vitest/coverage-c8": "^0.24.5",
-    "@vitest/ui": "^0.24.5",
-    "autoprefixer": "^10.4.13",
-    "jsdom": "^20.0.2",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
+    "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "@tsconfig/svelte": "^3.0.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
+    "svelte": "^3.52.0",
+    "svelte-check": "^2.9.2",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.5",
+    "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.0",
-    "vitest": "^0.24.5"
+    "vite": "^3.2.3"
   }
 }
